syntax = "proto3";
package SchoolZoneTraffic;

service SpeedEnforcementService {
    rpc GetSpeedStatus (SpeedRequest) returns (SpeedResponse);
    rpc StreamSpeedUpdates (SpeedRequest) returns (stream SpeedResponse);
    rpc SendSpeedData (stream SpeedData) returns (SpeedAck);
    rpc AdjustSpeedLimits (stream SpeedData) returns (stream SpeedResponse);
}

message SpeedRequest {
    string zone_id = 1;
}

message SpeedResponse {
    string zone_id = 1;
    int32 speed_limit = 2;
    bool violation_detected = 3;
    string vehicle_id = 4;
    int32 current_speed = 5;
    string reason = 6;
    int32 total_violations_today = 7;
}

message SpeedData {
    string vehicle_id = 1;
    string zone_id = 2;
    int32 current_speed = 3;
    string condition = 4; // Only used for Bi-Directional
}

message SpeedAck {
    bool success = 1;
    string message = 2;
}